[package]
name = "battleplan"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]

[dependencies]
error-chain = "0.2.1"
clap = "2.9.2"
yaml-rust = "0.3.3"
url = { version = "1.1.1", features = [ "serde" ] }
chrono = {version = "0.2.21", features = ["serde"] }
regex = "0.1"
log = "0.3.6"
env_logger = "0.3.4"

[dependencies.hyper]
version = "0.9.8"
default-features = false

[dependencies.native-tls]
git = "https://github.com/sfackler/rust-native-tls.git"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
openssl-sys = { version = "0.7.11" }
